[gd_scene load_steps=5 format=3 uid="uid://b3fm5is446m84"]

[ext_resource type="Script" path="res://Scripts/buttons.gd" id="1_0v75t"]
[ext_resource type="Texture2D" uid="uid://bkughl01gt8v6" path="res://Assets/backgrounds/origbig.png" id="2_bcqoc"]
[ext_resource type="FontFile" uid="uid://cxpxmt3gk1fur" path="res://Assets/Fonts/square-deal.ttf" id="3_bqqa0"]
[ext_resource type="Texture2D" uid="uid://c0tl127hrt8kd" path="res://Assets/forestSprites_ v1.2/lancelot_.png" id="4_au5jw"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0v75t")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.877616, 0.877616, 0.877616, 1)
texture_filter = 1
layout_mode = 0
offset_right = 2871.0
offset_bottom = 1613.0
texture = ExtResource("2_bcqoc")
stretch_mode = 4

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1483.0
offset_top = 20.0
offset_right = -19.999
offset_bottom = 728.0
grow_horizontal = 0
pivot_offset = Vector2(50, 15)
theme_override_fonts/font = ExtResource("3_bqqa0")
theme_override_font_sizes/font_size = 350
text = "Knight 
with a gun"
horizontal_alignment = 2

[node name="Hero" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(610, 990)
rotation = -0.118682
scale = Vector2(61.6283, 63.397)
texture = ExtResource("4_au5jw")
hframes = 8
vframes = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(150, 50)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -358.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 0
grow_vertical = 0

[node name="Start" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 120)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_bqqa0")
theme_override_font_sizes/font_size = 80
text = "Start"

[node name="Options" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 120)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_bqqa0")
theme_override_font_sizes/font_size = 80
text = "Tutorial"

[node name="Quit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 120)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_bqqa0")
theme_override_font_sizes/font_size = 80
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
