[gd_scene load_steps=3 format=3 uid="uid://d1oyg2p02molm"]

[ext_resource type="Script" path="res://Scripts/buttons.gd" id="1_hkmyt"]
[ext_resource type="Texture2D" uid="uid://b6sjuklqkbqdt" path="res://Assets/Person.png" id="2_n5ipb"]

[node name="PartySelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hkmyt")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -102.5
offset_right = 102.5
offset_bottom = 52.0
grow_horizontal = 2
pivot_offset = Vector2(102.5, 0)
theme_override_font_sizes/font_size = 90
text = "SELECT YOUR PARTY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="selected_name" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -439.0
offset_top = -377.0
offset_right = 439.0
offset_bottom = -250.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(102.5, 0)
theme_override_font_sizes/font_size = 60
horizontal_alignment = 1
vertical_alignment = 1

[node name="Continue" type="Button" parent="."]
custom_minimum_size = Vector2(300, 100)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -150.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Continue"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -278.0
offset_top = -54.0
offset_right = 278.0
offset_bottom = 54.0001
grow_horizontal = 2
grow_vertical = 2

[node name="Character" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
icon = ExtResource("2_n5ipb")

[node name="Character2" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
icon = ExtResource("2_n5ipb")

[node name="Character3" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
icon = ExtResource("2_n5ipb")

[node name="Character4" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
icon = ExtResource("2_n5ipb")

[node name="Character5" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
icon = ExtResource("2_n5ipb")

[connection signal="pressed" from="Continue" to="." method="_on_continue_pressed"]
