[gd_scene load_steps=2 format=3 uid="uid://c0hw84b6c7i00"]

[ext_resource type="Script" path="res://Scripts/buttons.gd" id="1_5bbgw"]

[node name="EndMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5bbgw")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -13.0
offset_right = 75.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(75, 15)
theme_override_font_sizes/font_size = 150
text = "Winner"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Return" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -190.0
offset_top = -71.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(4, 4)
pivot_offset = Vector2(150, 30)
text = "Return"

[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
